--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -14,6 +14,8 @@ jobs:
     strategy:
       matrix:
         versions: [latest, 9, 10]
+    env:
+      repo: "govpf/node-dev"
     steps:
     -
       name: Checkout
@@ -37,11 +39,11 @@ jobs:
         pull: true
         push: true
         tags: |
-          govpf/node-dev:${{ matrix.versions }}
+          ${{ env.repo }}:${{ matrix.versions }}
 
     - name: Update repo description
       uses: peter-evans/dockerhub-description@v2
       with:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
-        repository: govpf/node-dev
+        repository: "${{ env.repo }}"
