--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -1,4 +1,4 @@
-name: Publish Docker images
+name: Build Docker images
 
 on: pull_request
 
@@ -18,7 +18,7 @@ jobs:
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v1.5.1
 
-    - name: Build and push
+    - name: Build
       uses: docker/build-push-action@v2.6.1
       with:
         context: .
