--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        versions: [latest, 9, 10, 14]
+        versions: [latest, 9, 10, 14, 16]
     env:
       repo: "govpf/node-dev"
     steps:
