Remove unsupported, deprecated versions of node
They won't build and they aren't updated anyway.

--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        versions: [latest, 9, 10, 14, 16]
+        versions: [latest, 14, 16]
     env:
       repo: "govpf/node-dev"
     steps:
